base/5.ingress/5.2.1.demo-domain.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      type: api
      service: nginx
  minReadySeconds: 1
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        type: api
        service: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.2
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    type: api
    service: nginx
