base/5.ingress/5.2.2.ingress-demo-domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: demo.bereslaszlo
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80

# curl -H "HOST: demo.bereslaszlo" http://192.168.59.103/
